[package]
name = "mocki"
description = "A simple mock realization"
keywords = ["test", "mock"]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/wayfar9r/mocki.git"
authors = ["Artemij Artemev"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
